# open

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  appveyor.yml  travis.yml
.circleci/: config.yml
app/: CMakeLists.txt
app/src/: main.cpp
web/: index.html  package-lock.json  package.json
web/src/: App.test.js
